kube/req_splitting/ambassador_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ambassador
  labels: 
    app: ambassador-service
spec:
  containers:
    # This is where the application container would go, for example
    # - name: some-name
    #   image: some-image
    # This is the ambassador container
    - name: nginx
      image: nginx
      ports:
        - containerPort: 8081
          name: "http-server"
      volumeMounts:
      - name: nginx-pv-storage        
        mountPath: /usr/local/share/nginx
      - name: config-volume
        mountPath: /etc/nginx
  volumes:
    - name: nginx-pv-storage
      persistentVolumeClaim:
        claimName: nginx-pv-claim
    - name: config-volume
      configMap:
        name: experiment-config
