kube/req_splitting/dictionary_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dictionary-server
spec:
  selector:
    matchLabels:
      app: dictionary-server
  replicas: 1
  template:
    metadata:
      labels:
        app: dictionary-server
    spec:
      containers:
      - name: server
        image: brendanburns/dictionary-server
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
