kube/req_splitting/echo_server_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver2
spec:
  selector:
    matchLabels:
      app: echoserver2
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver2
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.0
        imagePullPolicy: Always
        name: echoserver2
        ports:
        - containerPort: 8080
