kube/req_splitting/ambassador_srvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambassador-srvc
  labels:
    app: ambassador-srvc
spec:
  ports:
  - port: 8082
    targetPort: 8081
    protocol: TCP
    name: http 
  selector:
    # Change this selector to match your application's labels
    app: ambassador-service
