kube/req_splitting/ingress_nginx_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ambassador-srvc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ambassador-srvc
            port:
              number: 8082
